unpackaged/main/default/objects/Opportunity/fields/AAC_Nasahi_Panel__c.field-meta.xml
<CustomField>
    <fullName>AAC_Nasahi_Panel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>VIC ONLY</inlineHelpText>
    <label>AAC - Nasahi Panel</label>
    <type>Checkbox</type>
</CustomField>