unpackaged/main/default/objects/Opportunity/fields/Acceptance_Letter__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Letter that was accepted</description>
    <label>Acceptance Letter</label>
    <type>Checkbox</type>
</CustomField>