unpackaged/main/default/objects/Opportunity/fields/Accepted_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Sub_Status__c</fullName>
    <label>Accepted Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending - Delivery Date</fullName>
            </value>
            <value>
                <fullName>Pending - Credit</fullName>
            </value>
            <value>
                <fullName>Pending - Payment	Pending</fullName>
            </value>
            <value>
                <fullName>Pending - Stock Availability</fullName>
            </value>
            <value>
                <fullName>Pending - Additional Items</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>