unpackaged/main/default/objects/Opportunity/fields/Account_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Phone__c</fullName>
    <formula>Account.Owner.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Manager Phone</label>
    <type>Text</type>
</CustomField>