unpackaged/main/default/objects/Opportunity/fields/Account_Name_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Email_Template__c</fullName>
    <description>This field is used in Lightning email templates to display the account name</description>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name - Email Template</label>
    <type>Text</type>
</CustomField>