unpackaged/main/default/objects/Opportunity/fields/Acoustic_Notes__c.field-meta.xml
<CustomField>
    <fullName>Acoustic_Notes__c</fullName>
    <label>Acoustic Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>