unpackaged/main/default/objects/Opportunity/fields/Active_States__c.field-meta.xml
<CustomField>
    <fullName>Active_States__c</fullName>
    <label>Active States</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&quot;NATIONAL</fullName>
                <label>NATIONAL</label>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>NQ</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>QLD</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>