unpackaged/main/default/objects/Opportunity/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <label>Additional Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>