unpackaged/main/default/objects/Opportunity/fields/Air_conditioners__c.field-meta.xml
<CustomField>
    <fullName>Air_conditioners__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Air conditioners offer</description>
    <label>Air conditioners</label>
    <type>Checkbox</type>
</CustomField>