unpackaged/main/default/objects/Opportunity/fields/Aluminium_windows__c.field-meta.xml
<CustomField>
    <fullName>Aluminium_windows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aluminium windows offer</description>
    <label>Aluminium windows</label>
    <type>Checkbox</type>
</CustomField>