unpackaged/main/default/objects/Opportunity/fields/Appliance__c.field-meta.xml
<CustomField>
    <fullName>Appliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appliance</label>
    <type>Checkbox</type>
</CustomField>