unpackaged/main/default/objects/Opportunity/fields/Appliances__c.field-meta.xml
<CustomField>
    <fullName>Appliances__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Appliances offer</description>
    <label>Appliances</label>
    <type>Checkbox</type>
</CustomField>