unpackaged/main/default/objects/Opportunity/fields/Appliances_Notes__c.field-meta.xml
<CustomField>
    <fullName>Appliances_Notes__c</fullName>
    <label>Appliances Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>