unpackaged/main/default/objects/Opportunity/fields/Appliances_Quality__c.field-meta.xml
<CustomField>
    <fullName>Appliances_Quality__c</fullName>
    <label>Appliances Quality</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Appliances_As_Per_Plan__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Better</fullName>
            </value>
            <value>
                <fullName>Best</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>