unpackaged/main/default/objects/Opportunity/fields/Architraves__c.field-meta.xml
<CustomField>
    <fullName>Architraves__c</fullName>
    <label>Architraves</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Interior_Finishings__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Required - Specify</fullName>
            </value>
            <value>
                <fullName>As Per Default Template</fullName>
            </value>
            <value>
                <fullName>As Per Plan</fullName>
                <isActive>false</isActive>
                <label>As Per Plan</label>
            </value>
            <value>
                <fullName>As Per Template</fullName>
                <isActive>false</isActive>
                <label>As Per Template</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>