unpackaged/main/default/objects/Opportunity/fields/Architraves_Notes__c.field-meta.xml
<CustomField>
    <fullName>Architraves_Notes__c</fullName>
    <label>Architraves Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>