unpackaged/main/default/objects/Opportunity/fields/Average_GP__c.field-meta.xml
<CustomField>
    <fullName>Average_GP__c</fullName>
    <label>Average GP %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>