unpackaged/main/default/objects/Opportunity/fields/Balcony_and_Deck_Coverings__c.field-meta.xml
<CustomField>
    <fullName>Balcony_and_Deck_Coverings__c</fullName>
    <label>Balcony and Deck Coverings</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2700x600x19mm Scyon</fullName>
            </value>
            <value>
                <fullName>2700x600x22mm Scyon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>