unpackaged/main/default/objects/Opportunity/fields/Balcony_Flooring__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Flooring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balcony Flooring</label>
    <type>Checkbox</type>
</CustomField>