unpackaged/main/default/objects/Opportunity/fields/Balcony_Flooring_Type__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Flooring_Type__c</fullName>
    <label>Balcony Flooring Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same as Standard</fullName>
            </value>
            <value>
                <fullName>19mm Scyon</fullName>
            </value>
            <value>
                <fullName>22mm Scyon</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>