unpackaged/main/default/objects/Opportunity/fields/Balcony_Flooring_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Flooring_Type_Other__c</fullName>
    <label>Balcony Flooring Type - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>