unpackaged/main/default/objects/Opportunity/fields/Balcony_Joists_Solids__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Joists_Solids__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balcony Joists (Solids)</label>
    <type>Checkbox</type>
</CustomField>