unpackaged/main/default/objects/Opportunity/fields/Base_64_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Base_64_Site_Address__c</fullName>
    <description>Base 64 encoded value populated by an Apex Trigger, to send Site Address as accepted format to the COS system.</description>
    <label>Base 64 Site Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>