unpackaged/main/default/objects/Opportunity/fields/Bath__c.field-meta.xml
<CustomField>
    <fullName>Bath__c</fullName>
    <label>Bath</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Bathroom_Plumbing__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
            <value>
                <fullName>Required - Different to Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>