unpackaged/main/default/objects/Opportunity/fields/Bath_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bath_Notes__c</fullName>
    <label>Bath Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>