unpackaged/main/default/objects/Opportunity/fields/Bath_Quality__c.field-meta.xml
<CustomField>
    <fullName>Bath_Quality__c</fullName>
    <label>Bath Quality</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Bath__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Better</fullName>
            </value>
            <value>
                <fullName>Best</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>