unpackaged/main/default/objects/Opportunity/fields/Bathroom_Floors__c.field-meta.xml
<CustomField>
    <fullName>Bathroom_Floors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bathroom Floors</label>
    <type>Checkbox</type>
</CustomField>