unpackaged/main/default/objects/Opportunity/fields/Bathroom_Plumbing__c.field-meta.xml
<CustomField>
    <fullName>Bathroom_Plumbing__c</fullName>
    <label>Bathroom Plumbing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Required - Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>