unpackaged/main/default/objects/Opportunity/fields/Bathroom_Plumbing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bathroom_Plumbing_Notes__c</fullName>
    <label>Bathroom Plumbing Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>