unpackaged/main/default/objects/Opportunity/fields/Bathroom_Walls__c.field-meta.xml
<CustomField>
    <fullName>Bathroom_Walls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bathroom Walls</label>
    <type>Checkbox</type>
</CustomField>