unpackaged/main/default/objects/Opportunity/fields/Baths__c.field-meta.xml
<CustomField>
    <fullName>Baths__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Baths offer</description>
    <label>Baths</label>
    <type>Checkbox</type>
</CustomField>