unpackaged/main/default/objects/Opportunity/fields/Bay_Width__c.field-meta.xml
<CustomField>
    <fullName>Bay_Width__c</fullName>
    <label>Bay Width</label>
    <length>255</length>
    <type>Text</type>
</CustomField>