unpackaged/main/default/objects/Opportunity/fields/Bays_Required__c.field-meta.xml
<CustomField>
    <fullName>Bays_Required__c</fullName>
    <label>Bays Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>