unpackaged/main/default/objects/Opportunity/fields/Beyond_Tile__c.field-meta.xml
<CustomField>
    <fullName>Beyond_Tile__c</fullName>
    <label>Beyond Tile</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Other_BTI__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>