unpackaged/main/default/objects/Opportunity/fields/Beyond_Tile_Location__c.field-meta.xml
<CustomField>
    <fullName>Beyond_Tile_Location__c</fullName>
    <label>Beyond Tile Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>