unpackaged/main/default/objects/Opportunity/fields/Blockwork_incl_of_Retaining__c.field-meta.xml
<CustomField>
    <fullName>Blockwork_incl_of_Retaining__c</fullName>
    <label>Blockwork incl of Retaining</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Foundations__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
            <value>
                <fullName>Required - Different to Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>