unpackaged/main/default/objects/Opportunity/fields/Blockwork_Notes__c.field-meta.xml
<CustomField>
    <fullName>Blockwork_Notes__c</fullName>
    <label>Blockwork Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>