unpackaged/main/default/objects/Opportunity/fields/Box_Gutter_Boards__c.field-meta.xml
<CustomField>
    <fullName>Box_Gutter_Boards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Box Gutter Boards</label>
    <type>Checkbox</type>
</CustomField>