unpackaged/main/default/objects/Opportunity/fields/Box_Gutter_Detail__c.field-meta.xml
<CustomField>
    <fullName>Box_Gutter_Detail__c</fullName>
    <label>Box Gutter Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Plated Vertical Member</fullName>
            </value>
            <value>
                <fullName>No - Loose Parapet Timbers</fullName>
            </value>
            <value>
                <fullName>Yes - Box Gutter Board Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>