unpackaged/main/default/objects/Opportunity/fields/Brick_hardware__c.field-meta.xml
<CustomField>
    <fullName>Brick_hardware__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Brick hardware offer</description>
    <label>Brick hardware</label>
    <type>Checkbox</type>
</CustomField>