unpackaged/main/default/objects/Opportunity/fields/Brick_Notes__c.field-meta.xml
<CustomField>
    <fullName>Brick_Notes__c</fullName>
    <label>Brick Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>