unpackaged/main/default/objects/Opportunity/fields/Brick_Qty_per_m2__c.field-meta.xml
<CustomField>
    <fullName>Brick_Qty_per_m2__c</fullName>
    <label>Brick (Qty per m2)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Exterior__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
            <value>
                <fullName>Required - Different to Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>