unpackaged/main/default/objects/Opportunity/fields/Brick_sand__c.field-meta.xml
<CustomField>
    <fullName>Brick_sand__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Brick sand offer</description>
    <label>Brick sand</label>
    <type>Checkbox</type>
</CustomField>