unpackaged/main/default/objects/Opportunity/fields/Brick_supply__c.field-meta.xml
<CustomField>
    <fullName>Brick_supply__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Brick supply offer</description>
    <label>Brick supply</label>
    <type>Checkbox</type>
</CustomField>