unpackaged/main/default/objects/Opportunity/fields/BTI__c.field-meta.xml
<CustomField>
    <fullName>BTI__c</fullName>
    <label>BTI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Required - Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>