unpackaged/main/default/objects/Opportunity/fields/BTI_Notes__c.field-meta.xml
<CustomField>
    <fullName>BTI_Notes__c</fullName>
    <label>BTI Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>