unpackaged/main/default/objects/Opportunity/fields/Build_Type__c.field-meta.xml
<CustomField>
    <fullName>Build_Type__c</fullName>
    <label>Build Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Dwelling Site</fullName>
            </value>
            <value>
                <fullName>Multi Dwelling Site</fullName>
            </value>
            <value>
                <fullName>Multi Level Residential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>