unpackaged/main/default/objects/Opportunity/fields/Buildaprice_Extract__c.field-meta.xml
<CustomField>
    <fullName>Buildaprice_Extract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buildaprice Extract</label>
    <type>Checkbox</type>
</CustomField>