unpackaged/main/default/objects/Opportunity/fields/Builder_Type__c.field-meta.xml
<CustomField>
    <fullName>Builder_Type__c</fullName>
    <label>Builder Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>