unpackaged/main/default/objects/Opportunity/fields/Bulk_supply_items__c.field-meta.xml
<CustomField>
    <fullName>Bulk_supply_items__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bulk supply items offer</description>
    <label>Bulk supply items</label>
    <type>Checkbox</type>
</CustomField>