unpackaged/main/default/objects/Opportunity/fields/Bunnings_amount__c.field-meta.xml
<CustomField>
    <fullName>Bunnings_amount__c</fullName>
    <description>Used in reporting</description>
    <label>Bunnings $</label>
    <summarizedField>Supplier_Quote__c.Total_value_excluding_GST__c</summarizedField>
    <summaryFilterItems>
        <field>Supplier_Quote__c.Account_Record_Type__c</field>
        <operation>equals</operation>
        <value>Bunnings</value>
    </summaryFilterItems>
    <summaryForeignKey>Supplier_Quote__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>