unpackaged/main/default/objects/Opportunity/fields/Business_Days_Since_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_Since_Follow_Up_Date__c</fullName>
    <formula>(5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( (  Follow_Up_Date__c  - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Follow_Up_Date__c  - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Days Since Follow Up Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>