unpackaged/main/default/objects/Opportunity/fields/Business_days_until_pricing_expiry__c.field-meta.xml
<CustomField>
    <fullName>Business_days_until_pricing_expiry__c</fullName>
    <description>Used for reporting on opportunity follow ups. #CCRM-6081</description>
    <formula>(5 * ( FLOOR( (  Primary_Quote_Expiry_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(  Primary_Quote_Expiry_Date__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for reporting on opportunity follow ups</inlineHelpText>
    <label>Business days until pricing expiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>