unpackaged/main/default/objects/Opportunity/fields/Carport__c.field-meta.xml
<CustomField>
    <fullName>Carport__c</fullName>
    <label>Carport</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Landscaping_As_Per_Plan__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>As Required</fullName>
            </value>
            <value>
                <fullName>Required - Different to Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>