unpackaged/main/default/objects/Opportunity/fields/Carport_Notes__c.field-meta.xml
<CustomField>
    <fullName>Carport_Notes__c</fullName>
    <label>Carport Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>