unpackaged/main/default/objects/Opportunity/fields/Cavity_sliding_door_units__c.field-meta.xml
<CustomField>
    <fullName>Cavity_sliding_door_units__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cavity sliding door units offer</description>
    <label>Cavity sliding door units</label>
    <type>Checkbox</type>
</CustomField>