unpackaged/main/default/objects/Opportunity/fields/Ceiling_Lining_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Lining_Notes__c</fullName>
    <label>Ceiling Lining Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>