unpackaged/main/default/objects/Opportunity/fields/Ceiling_Lining_Rating__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Lining_Rating__c</fullName>
    <label>Ceiling Lining Rating</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Ceiling_Lining__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
            <value>
                <fullName>Gib 10mm</fullName>
            </value>
            <value>
                <fullName>Gib 13mm</fullName>
            </value>
            <value>
                <fullName>Elephant Board 10mm</fullName>
            </value>
            <value>
                <fullName>Elephant Board 13mm</fullName>
            </value>
            <value>
                <fullName>Other - Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>