unpackaged/main/default/objects/Opportunity/fields/Ceiling_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Notes__c</fullName>
    <label>Ceiling Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>