unpackaged/main/default/objects/Opportunity/fields/Ceiling_Pack__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Pack__c</fullName>
    <label>Ceiling Pack</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Frame_Truss__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
            <value>
                <fullName>Required - Different to Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>