unpackaged/main/default/objects/Opportunity/fields/Cladding__c.field-meta.xml
<CustomField>
    <fullName>Cladding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cladding offer</description>
    <inlineHelpText>VIC ONLY</inlineHelpText>
    <label>Cladding</label>
    <type>Checkbox</type>
</CustomField>