unpackaged/main/default/objects/Opportunity/fields/Claim_Life__c.field-meta.xml
<CustomField>
    <fullName>Claim_Life__c</fullName>
    <formula>First_Invoice__c -  CloseDate</formula>
    <label>Claim Life</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>