unpackaged/main/default/objects/Opportunity/fields/Close_Date_in_Current_FQ__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_in_Current_FQ__c</fullName>
    <formula>IF(CEILING( MONTH ( CloseDate ) / 3 ) = CEILING((MONTH(TODAY()) / 3)), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date in Current FQ</label>
    <type>Checkbox</type>
</CustomField>