unpackaged/main/default/objects/Opportunity/fields/Close_Date_in_Current_FY__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_in_Current_FY__c</fullName>
    <formula>IF(CloseDate &lt;= DATE(YEAR(TODAY()),6,30), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date in Current FY</label>
    <type>Checkbox</type>
</CustomField>