unpackaged/main/default/objects/Opportunity/fields/Close_Date_in_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_in_Current_Month__c</fullName>
    <formula>IF( MONTH (CloseDate) = (MONTH(TODAY())), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date in Current Month</label>
    <type>Checkbox</type>
</CustomField>