unpackaged/main/default/objects/Opportunity/fields/Clothesline__c.field-meta.xml
<CustomField>
    <fullName>Clothesline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Clothesline offer</description>
    <label>Clothesline</label>
    <type>Checkbox</type>
</CustomField>