unpackaged/main/default/objects/Opportunity/fields/Commercial_Folder__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Folder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Folder containing all Commercial business and reports</description>
    <label>Commercial Folder</label>
    <type>Checkbox</type>
</CustomField>