unpackaged/main/default/objects/Opportunity/fields/Concrete_Patios__c.field-meta.xml
<CustomField>
    <fullName>Concrete_Patios__c</fullName>
    <label>Concrete Patios</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Deck_Patio__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>As Required</fullName>
            </value>
            <value>
                <fullName>Required - Different to Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>