unpackaged/main/default/objects/Opportunity/fields/Concrete_Patios_Notes__c.field-meta.xml
<CustomField>
    <fullName>Concrete_Patios_Notes__c</fullName>
    <label>Concrete Patios Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>